# TurtleLab

./: .gitignore  gitkey2  gitkey2.pub  readme.md
cv_basics/: package.xml  setup.py
cv_basics/cv_basics/: visual_cortex.py
gpio_scripts/: motor_test.py  ws2812b.py  ws2812b_anim.py  ws2812b_subscriber.py
launch/: launch_firemech2.py  launch_spideysense.py  test_launch_firemech2.py  test_launch_spideysense.py  test_nodes_launch.py
pi_gpio/: gpio_pins.txt
pin_scripts/: blink.sh  nohup.out
test_nodes/: package.xml  setup.cfg  setup.py
test_nodes/launch/: test_launch.py
test_nodes/test_nodes/: Angle_Firemech.py  Buzzer.py  angle_firemech.py  buzzer.py  calibration_matrix.npy  distortion_coefficients.npy  firemech.py  firemech_2.py  keyboard_reader.py  ledSub.py  ledsub.py  movement_controller.py  publisher.py  publisher_anglemech_test.py  publisher_firemech_test.py  spideysense.py  subscriber_firemech.py  test_visual_cortex.py  ultrasoon.py  vel_publisher.py  visual_cortex.py  ws2812b_subscriber.py
turtlebot3_nodes/: package.xml  setup.cfg  setup.py
turtlebot3_nodes/launch/: launch.py  launch_debug.py  launch_debug_2.py
turtlebot3_nodes/turtlebot3_nodes/: ledSub.py  movement_controller.py  spideysense.py
ws2812b/: gpio_test.py  motor_test.py  rospy_ws.py  ws2812b.py
