<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_nodes</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO: License declaration</license>
  <license>Apache License 2.0</license>

  <exec_depend>sys</exec_depend>
  <exec_depend>select</exec_depend>
  <exec_depend>termios</exec_depend>
  <exec_depend>tty</exec_depend>
  <exec_depend>rclpy</depend>
  <exec_depend>std_msgs</depend>
  <exec_depend>opencv2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
